--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,5 +32,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo ${USERNAME}
+          echo ${{ env.USERNAME }}
           echo test, and deploy your project.
