--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,5 +32,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo ${{ variables.USERNAME }}
+          echo ${{ vars.USERNAME }}
           echo test, and deploy your project.
