--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,9 +1,18 @@
 name: "github runner test"
 on:
   workflow_dispatch:
+    inputs:
+      name: 
+        description: "display name"
+        required: true
+        type: choice
+        default: "venkat"
+        options:
+          - krishnan
+          - sparrow
 jobs:
   build:
     runs-on: self-hosted
     steps:
       - name: display message
-        run: echo "Hello world"
+        run: echo "Hello ${{ github.event.inputs.name }}""
