--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,7 @@ on:
         description: "display name"
         required: true
         type: choice
-        default: "venkat"
+        default: venkat
         options:
           - krishnan
           - sparrow
